# qtmock_mediaplayer

./: CMakeLists.txt  appmanageruicontrol.cpp  appmanageruicontrol.h  appuicontrol.cpp  appuicontrol.h  iappmanageruicontrol.xml  iappuicontrol.h  iappuicontrol.xml  iappuicontrolreceiver.cpp  iappuicontrolreceiver.h  imediaplayercontrol.h  imediaplayercontrol.xml  imediaplayercontrolreceiver.cpp  imediaplayercontrolreceiver.h  main.cpp  main.qml  player.cpp  player.h  qml.qrc  song.cpp  song.h  songlist.cpp  songlist.h
Image/: back_button.png:Zone.Identifier  back_button_hover.png:Zone.Identifier
